🐛 FIX: Overflow on mobile

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,7 @@
 .app {
   background-color: var(--primary-color);
   font-family: var(--font-base);
+  overflow-x: hidden;
 }
 
 .app__whitebg {
@@ -123,6 +124,7 @@
       width: 15px;
       height: 15px;
       color: var(--gray-color);
+      cursor: pointer;
     }
 
     &:hover {
